tests/toylang/neg/001474_mutation.toylang
program a = { var a : while; } .
